<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="MOMO Merchant POS"
            android:textAlignment="center"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toBottomOf="@id/progress_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/momo_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/phone_number_layout"
        android:src="@drawable/momo_logo"
        app:layout_constraintVertical_bias=".4"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:hint="@string/phone_number"
        android:layout_margin="16dp"
        android:textColorHint="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_contact_phone_black_24dp"
            android:drawablePadding="8dp"
            android:textColor="@color/colorAccent"
            android:inputType="number"
            app:hintTextColor="@color/colorPrimaryDark"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phone_number_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/pin"
        android:layout_margin="16dp"
        android:textColorHint="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="8dp"
            android:textColor="@color/colorAccent"
            android:inputType="numberPassword"
            app:hintTextColor="@color/colorPrimaryDark"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        app:strokeWidth="1dp"
        app:strokeColor="@color/slate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintStart_toStartOf="@id/password_layout"
        app:layout_constraintEnd_toEndOf="@id/password_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>